--- a/public/sass/_partials/_variables.scss
+++ b/public/sass/_partials/_variables.scss
@@ -1,6 +1,8 @@
 // Colors
 $green: #c9d304;
 $green-hover: #b4bd03;
+$primary: #71519d;
+$primary-hover: #65488d;
 $light-green: #d9e04f;
 
 $light-grey: #ececec;
