--- a/public/sass/_partials/_base-styles.scss
+++ b/public/sass/_partials/_base-styles.scss
@@ -73,13 +73,13 @@ a:active {
 
 a.green-link,
 a.green-link:visited {
-    color: $green;
+    color: $primary;
 }
 
 a.green-link:focus,
 a.green-link:hover,
 a.green-link:active {
-    color: $green-hover;
+    color: $primary-hover;
 }
 
 input, textarea {
@@ -138,13 +138,13 @@ label {
 
 .btn-green {
     @extend %btn;
-    background-color: $green;
-    border: 1px solid $green;
+    background-color: $primary;
+    border: 1px solid $primary;
     color: $dark-grey;
     &:hover,
     &:focus,
     &:active {
-        background-color: $green-hover;
+        background-color: $primary-hover;
     }
     &:disabled, 
     &[disabled] {
