--- a/public/sass/_partials/_modal.scss
+++ b/public/sass/_partials/_modal.scss
@@ -80,7 +80,7 @@
     .modal-body {
         text-align: center;
         .fa-check-circle {
-            color: $green;
+            color: $primary;
             font-size: 4rem;
             margin-bottom: 15px;
         }
