--- a/public/sass/_partials/_sections.scss
+++ b/public/sass/_partials/_sections.scss
@@ -22,7 +22,7 @@ section {
             cursor: pointer;
             padding: 0;
             &:hover .circle, &:focus .circle, &:active .circle, .circle.active {
-                background-color: $green;
+                background-color: $primary;
             }
             .circle {
                 background-color: $light-grey;
@@ -49,7 +49,7 @@ section {
                 width: 80%;
                 margin: 0 auto;
                 text-align: center;
-                background: $green;
+                background: $primary;
                 padding: 10px 0;
                 position: relative;
                 top: -12%;
@@ -65,7 +65,7 @@ section {
             }
             .block-title.active {
                 @media(max-width: 480px) {
-                    background: $green-hover;
+                    background: $primary-hover;
                 }
             }
         }
@@ -91,7 +91,7 @@ section {
                     width: 100%;
                 }
                 h4 {
-                    background: $green;
+                    background: $primary;
                     margin: 0;
                     padding: 8px 0;
                     text-align: center;
@@ -296,7 +296,7 @@ section {
                 margin: 0;
                 padding: 10px;
                 text-align: center;
-                border-bottom: 4px solid $green;
+                border-bottom: 4px solid $primary;
                 font-family: $font-xbold;
                 @media (max-width: 678px) {
                     font-size: 1.6rem;
