--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AGAIN | Cloud, Commerce, Company</title>
+    <title>LAKRAN Vendor Management Services</title>
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://againtest.azurewebsites.net/public/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://againtest.azurewebsites.net/public/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://againtest.azurewebsites.net/public/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="https://againtest.azurewebsites.net/public/images/favicons/site.webmanifest">
-    <link rel="mask-icon" href="https://againtest.azurewebsites.net/public/images/favicons/safari-pinned-tab.svg" color="#c9d304">
-    <link rel="shortcut icon" href="https://againtest.azurewebsites.net/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./public/images/favicons/site.webmanifest">
+    <link rel="mask-icon" href="./public/images/favicons/safari-pinned-tab.svg" color="#c9d304">
+    <link rel="shortcut icon" href="./favicon.ico">
     <meta name="msapplication-TileColor" content="#2b2b2b">
-    <meta name="msapplication-config" content="https://againtest.azurewebsites.net/public/images/favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="./public/images/favicons/browserconfig.xml">
     <meta name="theme-color" content="#2b2b2b">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
-    <link rel="stylesheet" href="https://againtest.azurewebsites.net/public/css/normalize.css">
-    <link rel="stylesheet" href="https://againtest.azurewebsites.net/public/css/unslider.min.css">
-    <link rel="stylesheet" href="https://againtest.azurewebsites.net/public/css/unslider-dots.css">
-    <link rel="stylesheet" href="https://againtest.azurewebsites.net/public/css/style.css">
+    <link rel="stylesheet" href="./public/css/normalize.css">
+    <link rel="stylesheet" href="./public/css/unslider.min.css">
+    <link rel="stylesheet" href="./public/css/unslider-dots.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <!-- Recaptcha -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- META TAGS for Social Media -->
     <!-- Search Engine -->
     <meta name="description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta name="image" content="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company.png">
+    <meta name="image" content="./public/images/again-cloud-commerce-company.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="AGAIN | Cloud, Commerce, Company">
     <meta itemprop="description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta itemprop="image" content="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company.png">
+    <meta itemprop="image" content="./public/images/again-cloud-commerce-company.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="AGAIN | Cloud, Commerce, Company">
     <meta name="twitter:description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
     <meta name="twitter:site" content="@againbylakran">
-    <meta name="twitter:image:src" content="https://againtest.azurewebsites.net/public/images/screenshot.png">
+    <meta name="twitter:image:src" content="./public/images/screenshot.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="AGAIN | Cloud, Commerce, Company">
     <meta name="og:description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta name="og:image" content="https://againtest.azurewebsites.net/public/images/screenshot.png">
+    <meta name="og:image" content="./public/images/screenshot.png">
     <meta name="og:url" content="http://again.nl">
     <meta name="og:site_name" content="AGAIN | Cloud, Commerce, Company">
     <meta name="fb:admins" content="184172875337875">
@@ -50,7 +50,7 @@
     <div class="slide-container">
         <ul>
             <li class="myslides slide-1">
-                <img class="logo" src="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for creating economic value</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('profit')" class="btn-white-transparent-xl">Our reasons</a><br />
@@ -58,7 +58,7 @@
                 </div>
             </li>
             <li class="myslides slide-2">
-                <img class="logo" src="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for saving natural resources</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('planet')" href="#reasons" class="btn-white-transparent-xl">Our reasons</a><br />
@@ -66,7 +66,7 @@
                 </div>
             </li>
             <li class="myslides slide-3">
-                <img class="logo" src="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company.png" alt="AGAIN Cloud Commerce Company">
+                <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for enabling communities</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('people')" href="#reasons" class="btn-white-transparent-xl">Our reasons</a><br />
@@ -79,7 +79,7 @@
 
 <nav id="nav-bar">
     <div class="left-menu">
-        <img onclick="menuClick('#hero-slider')" src="https://againtest.azurewebsites.net/public/images/again-cloud-commerce-company-dark.png" alt="AGAIN Cloud Commerce Company Logo">
+        <img onclick="menuClick('#hero-slider')" src="./public/images/lakran-vms-services-logo.png" alt="LAKRAN Vender Management Services">
     </div>
     <div class="right-menu">
         <div class="mobile-toggle" onclick="toggleMobileMenu()">
@@ -187,21 +187,21 @@
         <p>Other companies are:</p>
         <div class="companies">
             <a href="http://simplifyingpurchasing.com" target="_blank" title="LAKRAN Procurement Professionals">
-                <img src="https://againtest.azurewebsites.net/public/images/lakran-applogo.jpg" alt="LAKRAN Procurement Professionals Logo">
+                <img src="./public/images/lakran-applogo.jpg" alt="LAKRAN Procurement Professionals Logo">
             </a>
             <a href="http://lakran.com/again-stichting" target="_blank" title="AGAIN stichting">
-                <img src="https://againtest.azurewebsites.net/public/images/against-applogo.png" alt="AGAIN stichting Logo">
+                <img src="./public/images/against-applogo.png" alt="AGAIN stichting Logo">
             </a>
             <a href="http://flexforcemonkey.com" target="_blank" title="FlexForceMonkey">
-                <img src="https://againtest.azurewebsites.net/public/images/ffm-applogo.png" alt="FlexForceMonkey Logo">
+                <img src="./public/images/ffm-applogo.png" alt="FlexForceMonkey Logo">
             </a>
         </div>
     </div>
 </footer>
 
-<script src="https://againtest.azurewebsites.net/public/js/jquery-3.3.1.min.js"></script>
-<script src="https://againtest.azurewebsites.net/public/js/unslider.min.js"></script>
-<script src="https://againtest.azurewebsites.net/public/js/script.js"></script>
+<script src="./public/js/jquery-3.3.1.min.js"></script>
+<script src="./public/js/unslider.min.js"></script>
+<script src="./public/js/script.js"></script>
 <script>
     // Load Google Maps
     function initMap() {
