--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./public/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="./public/images/favicons/site.webmanifest">
-    <link rel="mask-icon" href="./public/images/favicons/safari-pinned-tab.svg" color="#c9d304">
-    <link rel="shortcut icon" href="./favicon.ico">
-    <meta name="msapplication-TileColor" content="#2b2b2b">
+    <link rel="mask-icon" href="./public/images/favicons/safari-pinned-tab.svg" color="#71519d">
+    <link rel="shortcut icon" href="./public/images/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="./public/images/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#2b2b2b">
+    <meta name="theme-color" content="#ffffff">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <link rel="stylesheet" href="./public/css/normalize.css">
@@ -51,11 +51,7 @@
         <ul>
             <li class="myslides slide-1">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-<<<<<<< HEAD
-                <div class="text">Software to connect companies for creating economic value!</div>
-=======
                 <div class="text">Software to connect companies for creating economic value</div>
->>>>>>> da9504f2bd50c7874e76c21943e521e7902235d0
                 <div class="buttons">
                     <a onclick="scrollToReason('profit')" class="btn-white-transparent-xl">Our reasons</a><br />
                     <a onclick="scrollToSolution('profit')" href="#solutions" class="btn-white-transparent-xl">Our solutions</a>
