--- a/public/sass/_partials/_sections.scss
+++ b/public/sass/_partials/_sections.scss
@@ -65,7 +65,7 @@ section {
             }
             .block-title.active {
                 @media(max-width: 480px) {
-                    background: $primary-hover;
+                    background: $primary-dark;
                 }
             }
         }
