--- a/public/sass/_partials/_variables.scss
+++ b/public/sass/_partials/_variables.scss
@@ -1,16 +1,20 @@
 // Colors
-$green: #c9d304;
-$green-hover: #b4bd03;
 $primary: #71519d;
-$primary-hover: #65488d;
-$light-green: #d9e04f;
+$primary-dark: darken($primary, 20%);
+$primary-light: lighten($primary, 20%);
+$secondary: #b288bc;
+$secondary-dark: darken($secondary, 20%);
+$secondary-light: lighten($secondary, 20%);
+$contrast: #ffd400;
+$contrast-dark: darken($contrast, 20%);
+$contrast-light: lighten($contrast, 20%);
 
 $light-grey: #ececec;
-$light-grey-hover: #dfdfdf;
+$light-grey-dark: darken($light-grey, 20%);
 $lighter-grey: #f5f5f5;
 $grey: #868689;
 $dark-grey: #2b2b2b;
-$dark-grey-hover: #555555;
+$dark-grey-light: lighten($dark-grey, 20%);
 
 // Numbers
 $hero-height: 91vh;
