--- a/public/sass/_partials/_footer.scss
+++ b/public/sass/_partials/_footer.scss
@@ -6,7 +6,7 @@
         width: 30%;
         display: inline-block;
         font-size: 14px;
-        .btn-green {
+        .btn-primary {
             width: 100%;
             margin-top: 8px;
         }
