--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,8 @@
         <div class="row all-reasons">
             <div class="column profit" onclick="selectReason('profit')">
                 <div class="circle">
-                    <img src="https://againtest.azurewebsites.net/public/images/profit-icon.png" alt="Profit Icon">
+                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/profit-icon.png" alt="Profit Icon"> --}}
+                    <svg id="profit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 176.3 180.26"><defs></defs><path class="cls-1" d="M0 45.83h33.29V177.7H0zM51.6 0h33.29v177.7H51.6zM103.19 22.38h33.29V177.7h-33.29z"/><rect class="cls-2" x="394.23" y="225.96" width="27.26" height="105.73" rx="12.32" ry="12.32" transform="rotate(-47.94 110.804 519.656)"/><path class="cls-2" d="M342.69 167.36a49.76 49.76 0 1 0 52.25 47.15 49.77 49.77 0 0 0-52.25-47.15zm4.39 85.48A35.83 35.83 0 1 1 381 215.22a35.82 35.82 0 0 1-33.92 37.62z" transform="translate(-276.84 -141.02)"/></svg>
                 </div>
                 <div class="block-title">
                     <h4>Profit</h4>
@@ -20,7 +21,8 @@
             </div>
             <div class="column people" onclick="selectReason('people')">
                 <div class="circle">
-                    <img src="https://againtest.azurewebsites.net/public/images/people-icon.png" alt="People Icon">
+                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/people-icon.png" alt="People Icon"> --}}
+                    <svg id="people-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 272.24 281.5"><defs></defs><path class="cls-1" d="M528.74 354.43c-25.87-6.93-25.43-18.9-25.43-18.9l-.06-20.72s9.48-10.68 11.37-24.81c0 0 7.53-2.2 8.79-13.19s-3.77-11.93-3.77-11.93 17.14-51.18-16.39-67.82-48 4.4-48 4.4-25.74.63-22.92 35.16 5 28.26 5 28.26-7.54 4.27-3.14 15.17 7.22 9.64 7.22 9.64.94 14.76 11.93 25.43l-.63 22.29s-3.77 11.94-25.43 17.27-29.83 14.76-29.83 14.76 27 33 80.69 33c22.7-.03 50.6-48.01 50.6-48.01zM360 352.17c-9-3-13.8-6.47-16.36-9.42A104 104 0 0 0 371 335.5s-10-44.68-7-56.34l3-11.66s1-61.88-26.25-70.44c-33.53-16.64-48 4.4-48 4.4s-18 .44-22.24 20.76c-.38.71-14 26.5-10.52 43.76 3.5 17.5 9 64.5-3.5 69.5a262 262 0 0 0 31.25 6.19c-3.07 4-9.63 9.72-22.92 13 0 0 31.42 47.73 50.86 47.73 53.28 0 80.7-33 80.7-33A171.29 171.29 0 0 0 360 352.17zm-85.68-86.88a4.71 4.71 0 0 1 .58-.4c-.04.05-.25.58-.61.4z" transform="translate(-256.5 -154.16)"/><path class="cls-2" d="M35.63 235.94a223.56 223.56 0 0 1 47.56-22.54c27.88-9.43 25-21.73 25-21.73l.08-27.06s-12.38-13.94-14.84-32.39c0 0-9.84-2.87-11.48-17.22s4.92-15.58 4.92-15.58-22.37-66.83 21.41-88.58 62.65 5.74 62.65 5.74 37.9 1.38 29.93 45.92c-6 33.65-8.42 37.4-8.42 37.4s10 2.3 6 19.3c-3.15 13.37-9.43 12.59-9.43 12.59s-1.23 19.27-15.58 33.21l.82 29.11s4.92 15.58 33.21 22.55 38.95 19.26 38.95 19.26-35.26 43.65-105.37 43c-69.6-.52-105.41-42.98-105.41-42.98z" fill="#3c3c3b" stroke="#fff" stroke-miterlimit="10" stroke-width="5"/></svg>
                 </div>
                 <div class="block-title">
                     <h4>People</h4>
@@ -71,26 +73,26 @@
             <div class="solution-banner flexforcemonkey profit">
                 <img src="https://againtest.azurewebsites.net/public/images/flexforcemonkey-banner.jpg" alt="FlexForceMonkey">
                 <h2 class="solution-title">FlexForceMonkey</h2>
-                <button class="btn-green" onclick="showSolution('flexforcemonkey')">Read more <span class="fa fa-caret-down"></span></button>
+                <button class="btn-primary" onclick="showSolution('flexforcemonkey')">Read more <span class="fa fa-caret-down"></span></button>
                 <p class="solution-text">Flexibility in organizations, both for blue collar and white collar, is hot.<br />
                     But joint administration on HR, Finance en Procurement data is difficult. Tried linking procurement systems to the flexile pricing of collective labor rules before? Succesfully managed invoices on unplannend and irratic delivery of hours? FlexForceMonkey is our platform for business commerce between any client and agency.<br />
-                    <a href="http://flexforcemonkey.com" target="_blank" class="btn-green">Visit our website</a>
+                    <a href="http://flexforcemonkey.com" target="_blank" class="btn-primary">Visit our website</a>
                 </p>
             </div>
             <div class="solution-banner prototype planet">
                 <img src="https://againtest.azurewebsites.net/public/images/prototype-banner.jpg" alt="Prototype in development">
                 <h2 class="solution-title">Prototype in development</h2>
-                <button class="btn-green" onclick="showSolution('prototype')">Read more <span class="fa fa-caret-down"></span></button>
+                <button class="btn-primary" onclick="showSolution('prototype')">Read more <span class="fa fa-caret-down"></span></button>
                 <p class="solution-text">
                     We are working on a new internet platform, fully dedicated to enabling companies in the circular economy together.<br />
                     Want to be updated on this topic and our developments in the coming months? Get yourselve subscribed to our mailing list straight away!<br />
-                    <a onclick="menuClick('#mailing')" class="btn-green">Subscribe to our newsletter</a>
+                    <a onclick="menuClick('#mailing')" class="btn-primary">Subscribe to our newsletter</a>
                 </p>
             </div>
             <div class="solution-banner deployments people">
                 <img src="https://againtest.azurewebsites.net/public/images/deployments-banner.jpg" alt="Custom deployments">
                 <h2 class="solution-title">Custom deployments</h2>
-                <button class="btn-green" onclick="showSolution('deployments')">Read more <span class="fa fa-caret-down"></span></button>
+                <button class="btn-primary" onclick="showSolution('deployments')">Read more <span class="fa fa-caret-down"></span></button>
                 <p class="solution-text">
                     We have a nice piece of technology just waiting to be leveraged in enabling clients to perform better in their Business Commerce collaborations. When you need an infrastructure that holds functionality for Catalog-integration, process-driven XML messaging and full-service integration-as-a-service on top of it? Get in touch for a cup-of-coffee.​
                 </p>
@@ -120,7 +122,7 @@
                 <h4 class="column-title">Careers</h4>
                 <div class="column-text">
                     <p>Check tech and get in touch</p>
-                    <a href="http://lakran.com/vacatures/" target="_blank" class="btn-green entire-width">Vacancies (Dutch) <span class="fa fa-external-link-alt"></span></a>
+                    <a href="http://lakran.com/vacatures/" target="_blank" class="btn-primary entire-width">Vacancies (Dutch) <span class="fa fa-external-link-alt"></span></a>
                 </div>
             </div>
             <div id="mailing" class="column column-1">
@@ -149,7 +151,7 @@
                                     <div class="response" id="mce-success-response" style="display:none"></div>
                                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53785b16e31b45f83200436f2_81a374215f" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-green"></div>
+                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-primary"></div>
                             </div>
                         </form>
                     </div>
