--- a/public/sass/_partials/_sections.scss
+++ b/public/sass/_partials/_sections.scss
@@ -204,115 +204,35 @@ section {
 }
 
 #solutions {
-    .solution-banners {
-        .solution-banner {
-            position: relative;
-            margin-bottom: 20px;
-            .solution-title {
-                position: absolute;
-                right: 20px;
-                top: -20px;
-                color: white;
-                @media (max-width: 768px) {
-                    font-size: 2rem;
-                }
-                @media (max-width: 668px) {
-                    top: -15px;
-                }
-                @media (max-width: 580px) {
-                    font-size: 1.6rem;
-                    top: -10px;
-                }
-                @media (max-width: 475px) {
-                    right: 10px;
-                    font-size: 1.4rem;
-                }
-                @media (max-width: 415px) {
-                    left: 10px;
-                    width: 60%;
-                }
-                @media (max-width: 375px) {
-                    position: relative;
-                    margin: 5px 0 15px 0;
-                    left: 0;
-                    width: 65%;
-                    float: left;
-                    color: $dark-grey;
-                    font-family: $font-bold;
-                    font-size: 1.2rem;
-                    margin: 0;
-                    padding-top: 5px;
-                }
+    .solution-blocks {
+        display: flex;
+        flex-wrap: wrap;
+        .solution-block {
+            width: 49%;
+            margin-left: 1%;
+            color: white;
+            background:
+                linear-gradient(
+                    rgba(113, 81, 157, 0.4),
+                    rgba(113, 81, 157, 0.4)
+                ),
+                url('http://localhost:3000/public/images/building-block.jpg')
+                no-repeat
+                center;
+            background-size: cover;
+            margin-bottom: 15px;
+            &:nth-child(odd) {
+                margin-left: 0;
+                margin-right: 1%;
             }
-            button {
-                position: absolute;
-                right: 20px;
-                width: 120px;
-                @media (max-width: 668px) {
-                    top: 55px;
-                }
-                @media (max-width: 580px) {
-                    font-size: 0.9rem;
-                    width: 100px;
-                    top: 45px;
-                }
-                @media (max-width: 475px) {
-                    right: 10px;
-                    padding: 4px 8px;
-                    width: 100px;
-                    top: 35px;
-                }
-                @media (max-width: 415px) {
-                    width: 35%;
-                    top: 23px;
-                }
-                @media (max-width: 375px) {
-                    position: relative;
-                    top: 0;
-                    right: 0;
-                }
-                @media (max-width: 310px) {
-                    font-size: 0.7rem;
-                }
+            .sol-title {
+                border-bottom: 3px solid white;
+                text-align: center;
+                margin: 0;
+                padding: 14px 0;
             }
-            .solution-text {
-                background-color: $light-grey;
-                padding: 20px;
-                display: block;
-                width: 60%;
-                margin: -5px 0 20px auto;
-                a {
-                    margin-top: 20px;
-                }
-                @media (max-width: 668px) {
-                    width: 80%;
-                }
-                @media (max-width: 415px) {
-                    width: 100%;
-                }
-                @media (max-width: 375px) {
-                    margin-top: 0;
-                }
-            }
-        }
-        .flexforcemonkey .solution-title {
-            color: $dark-grey;
-            @media (max-width: 415px) {
-                top: 5px;
-                background-color: rgba(255, 255, 255, 0.5);
-                height: 30px;
-            }
-            @media (max-width: 375px) {
-                top: -1px;
-                background-color: transparent;
-            }
-        }
-        .deployments .solution-title {
-            @media (max-width: 375px) {
-                top: -1px;
-            }
-            @media (max-width: 318px) {
-                top: -10px;
+            .sol-text {
+                padding: 15px;
             }
         }
     }
