--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,40 +69,37 @@
 <section id="solutions">
     <div class="container">
         <h2 class="section-title">Our solutions</h2>
-        <div class="solution-banners">
-            <div class="solution-banner flexforcemonkey profit">
-                <img src="https://againtest.azurewebsites.net/public/images/flexforcemonkey-banner.jpg" alt="FlexForceMonkey">
-                <h2 class="solution-title">FlexForceMonkey</h2>
-                <button class="btn-primary" onclick="showSolution('flexforcemonkey')">Read more <span class="fa fa-caret-down"></span></button>
-                <p class="solution-text">Flexibility in organizations, both for blue collar and white collar, is hot.<br />
-                    But joint administration on HR, Finance en Procurement data is difficult. Tried linking procurement systems to the flexile pricing of collective labor rules before? Succesfully managed invoices on unplannend and irratic delivery of hours? FlexForceMonkey is our platform for business commerce between any client and agency.<br />
-                    <a href="http://flexforcemonkey.com" target="_blank" class="btn-primary">Visit our website</a>
-                </p>
+        <div class="solution-blocks">
+            <div class="solution-block strategy">
+                <h4 class="sol-title"><span class="fa fa-comments"></span> Strategy as a Service</h4>
+                <div class="sol-text">
+                    <p>Hier komt wat te staan over ...</p>
+                </div>
             </div>
-            <div class="solution-banner prototype planet">
-                <img src="https://againtest.azurewebsites.net/public/images/prototype-banner.jpg" alt="Prototype in development">
-                <h2 class="solution-title">Prototype in development</h2>
-                <button class="btn-primary" onclick="showSolution('prototype')">Read more <span class="fa fa-caret-down"></span></button>
-                <p class="solution-text">
-                    We are working on a new internet platform, fully dedicated to enabling companies in the circular economy together.<br />
-                    Want to be updated on this topic and our developments in the coming months? Get yourselve subscribed to our mailing list straight away!<br />
-                    <a onclick="menuClick('#mailing')" class="btn-primary">Subscribe to our newsletter</a>
-                </p>
+            <div class="solution-block insights">
+                <h4 class="sol-title"><span class="fa fa-lightbulb"></span> Insights as a Service</h4>
+                <div class="sol-text">
+                    <p>Hier komt wat te staan over ...</p>
+                </div>
             </div>
-            <div class="solution-banner deployments people">
-                <img src="https://againtest.azurewebsites.net/public/images/deployments-banner.jpg" alt="Custom deployments">
-                <h2 class="solution-title">Custom deployments</h2>
-                <button class="btn-primary" onclick="showSolution('deployments')">Read more <span class="fa fa-caret-down"></span></button>
-                <p class="solution-text">
-                    We have a nice piece of technology just waiting to be leveraged in enabling clients to perform better in their Business Commerce collaborations. When you need an infrastructure that holds functionality for Catalog-integration, process-driven XML messaging and full-service integration-as-a-service on top of it? Get in touch for a cup-of-coffee.​
-                </p>
+            <div class="solution-block solutioning">
+                <h4 class="sol-title"><span class="fa fa-puzzle-piece"></span> Solutioning as a Service</h4>
+                <div class="sol-text">
+                    <p>Hier komt wat te staan over ...</p>
+                </div>
+            </div>
+            <div class="solution-block management">
+                <h4 class="sol-title"><span class="fa fa-users"></span> Management as a Service</h4>
+                <div class="sol-text">
+                    <p>Hier komt wat te staan over ...</p>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 <div class="banner banner-2">
-    <img src="https://againtest.azurewebsites.net/public/images/desktop.jpg" alt="Desktop Banner">
+    <img src="./public/images/desktop.jpg" alt="Desktop Banner">
 </div>
 
 <section id="three-colums">
