--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAKRAN Vendor Management Services</title>
+    <title>LAKRAN VMS Services</title>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./public/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicons/favicon-32x32.png">
@@ -164,7 +164,7 @@
 <footer id="footer">
     <div class="container">
         <div class="footer-text" itemscope itemtype="http://schema.org/LocalBusiness">
-            <strong itemprop="name">AGAIN by LAKRAN</strong> <br />
+            <strong itemprop="name">LAKRAN VMS Services</strong> <br />
             <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                 <span itemprop="streetAddress">Apeldoornseweg 51</span><br />
                 <span itemprop="postOfficeBoxNumber">Postbus 115</span><br />
@@ -172,8 +172,8 @@
                 <span itemprop="addressCountry">The Netherlands</span>
             </p>
             <p>
-                <span class="fa fa-phone"></span> <a class="green-link" href="tel:+31263792417"><span itemprop="telephone">+31 26 - 379 24 17</span></a><br />
-                <span class="fa fa-envelope"></span> <a class="green-link" href="mailto:curious@again.nl"><span itemprop="email">curious@again.nl</span></a>
+                <span class="fa fa-phone"></span> <a class="link-light" href="tel:+31264452331"><span itemprop="telephone">+31 26 - 445 23 31</span></a><br />
+                <span class="fa fa-envelope"></span> <a class="link-light" href="mailto:curious@again.nl"><span itemprop="email">curious@again.nl</span></a>
             </p>
             <p>
                 Or fill in our contact form:<br />
@@ -183,7 +183,7 @@
         <div id="map" class="footer-maps"></div>
     </div>
     <div class="other-brands">
-        <h6>AGAIN by LAKRAN is part of <a class="green-link" href="http://lakran.com" target="_blank">LAKRAN Commerce Group</a></h6>
+        <h6>AGAIN by LAKRAN is part of <a class="link-light" href="http://lakran.com" target="_blank">LAKRAN Commerce Group</a></h6>
         <p>Other companies are:</p>
         <div class="companies">
             <a href="http://simplifyingpurchasing.com" target="_blank" title="LAKRAN Procurement Professionals">
@@ -228,7 +228,7 @@ window.cookieconsent.initialise({
     "text": "#f5f5f5"
     },
     "button": {
-    "background": "#c9d304",
+    "background": "#ffd400",
     "text": "#2b2b2b"
     }
 },
