--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,19 @@ a.green-link:active {
 }
 
 /* line 85, ../sass/_partials/_base-styles.scss */
+a.link-light,
+a.link-light:visited {
+  color: #b288bc;
+}
+
+/* line 90, ../sass/_partials/_base-styles.scss */
+a.link-light:focus,
+a.link-light:hover,
+a.link-light:active {
+  color: #91599e;
+}
+
+/* line 96, ../sass/_partials/_base-styles.scss */
 input, textarea {
   padding: 6px;
   border: 1px solid #c6c6c6;
@@ -161,13 +174,13 @@ input, textarea {
   margin: 6px 0 8px 0;
 }
 
-/* line 92, ../sass/_partials/_base-styles.scss */
+/* line 103, ../sass/_partials/_base-styles.scss */
 label {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
 }
 
-/* line 96, ../sass/_partials/_base-styles.scss */
-.btn-white-transparent, .btn-white-transparent-xl, .btn-primary, .btn-primary-xl, .btn-dark-grey-xl, .btn-dark-grey {
+/* line 107, ../sass/_partials/_base-styles.scss */
+.btn-white-transparent, .btn-white-transparent-xl, .btn-primary, .btn-primary-xl, .btn-dark-grey-xl, .btn-secondary, .btn-secondary-xl, .btn-dark-grey {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -187,88 +200,112 @@ label {
   text-decoration: none;
 }
 
-/* line 116, ../sass/_partials/_base-styles.scss */
+/* line 127, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent, .btn-white-transparent-xl {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid white;
   color: #2b2b2b;
 }
-/* line 121, ../sass/_partials/_base-styles.scss */
+/* line 132, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:hover, .btn-white-transparent-xl:hover, .btn-white-transparent:focus, .btn-white-transparent-xl:focus, .btn-white-transparent:active, .btn-white-transparent-xl:active {
   background-color: rgba(255, 255, 255, 0.9);
 }
-/* line 126, ../sass/_partials/_base-styles.scss */
+/* line 137, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:disabled, .btn-white-transparent-xl:disabled, .btn-white-transparent[disabled], [disabled].btn-white-transparent-xl {
   cursor: not-allowed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-/* line 133, ../sass/_partials/_base-styles.scss */
+/* line 144, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 139, ../sass/_partials/_base-styles.scss */
+/* line 150, ../sass/_partials/_base-styles.scss */
 .btn-primary, .btn-primary-xl, .btn-dark-grey-xl {
   background-color: #71519d;
   border: 1px solid #71519d;
   color: white;
 }
-/* line 144, ../sass/_partials/_base-styles.scss */
+/* line 155, ../sass/_partials/_base-styles.scss */
 .btn-primary:hover, .btn-primary-xl:hover, .btn-dark-grey-xl:hover, .btn-primary:focus, .btn-primary-xl:focus, .btn-dark-grey-xl:focus, .btn-primary:active, .btn-primary-xl:active, .btn-dark-grey-xl:active {
   background-color: #4d376b;
   border-color: #4d376b;
   color: white;
 }
-/* line 151, ../sass/_partials/_base-styles.scss */
+/* line 162, ../sass/_partials/_base-styles.scss */
 .btn-primary:disabled, .btn-primary-xl:disabled, .btn-dark-grey-xl:disabled, .btn-primary[disabled], [disabled].btn-primary-xl, [disabled].btn-dark-grey-xl {
   cursor: not-allowed;
   background-color: #987ebc;
   border-color: #987ebc;
 }
 
-/* line 159, ../sass/_partials/_base-styles.scss */
+/* line 170, ../sass/_partials/_base-styles.scss */
 .btn-primary-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 165, ../sass/_partials/_base-styles.scss */
+/* line 176, ../sass/_partials/_base-styles.scss */
 a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   color: white;
 }
 
-/* line 169, ../sass/_partials/_base-styles.scss */
+/* line 180, ../sass/_partials/_base-styles.scss */
+.btn-secondary, .btn-secondary-xl {
+  background-color: #b288bc;
+  border: 1px solid #b288bc;
+  color: #2b2b2b;
+}
+/* line 185, ../sass/_partials/_base-styles.scss */
+.btn-secondary:hover, .btn-secondary-xl:hover, .btn-secondary:focus, .btn-secondary-xl:focus, .btn-secondary:active, .btn-secondary-xl:active {
+  background-color: #91599e;
+  border-color: #91599e;
+}
+/* line 191, ../sass/_partials/_base-styles.scss */
+.btn-secondary:disabled, .btn-secondary-xl:disabled, .btn-secondary[disabled], [disabled].btn-secondary-xl {
+  cursor: not-allowed;
+  background-color: #d2b9d8;
+  border-color: #d2b9d8;
+}
+
+/* line 199, ../sass/_partials/_base-styles.scss */
+.btn-secondary-xl {
+  padding: 15px 20px;
+  font-size: 1.4rem;
+}
+
+/* line 205, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey {
   background-color: #2b2b2b;
   border: 1px solid #2b2b2b;
   color: white;
 }
-/* line 174, ../sass/_partials/_base-styles.scss */
+/* line 210, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:hover, .btn-dark-grey:focus, .btn-dark-grey:active {
   background-color: #515151;
 }
-/* line 179, ../sass/_partials/_base-styles.scss */
+/* line 215, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:disabled, .btn-dark-grey[disabled] {
   cursor: not-allowed;
   background-color: rgba(43, 43, 43, 0.6);
 }
 
-/* line 186, ../sass/_partials/_base-styles.scss */
+/* line 222, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 192, ../sass/_partials/_base-styles.scss */
+/* line 228, ../sass/_partials/_base-styles.scss */
 .row {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   width: 100%;
 }
-/* line 197, ../sass/_partials/_base-styles.scss */
+/* line 233, ../sass/_partials/_base-styles.scss */
 .row .column {
   flex-basis: 0;
   flex-grow: 1;
@@ -276,12 +313,12 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   padding: 15px;
 }
 
-/* line 205, ../sass/_partials/_base-styles.scss */
+/* line 241, ../sass/_partials/_base-styles.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 209, ../sass/_partials/_base-styles.scss */
+/* line 245, ../sass/_partials/_base-styles.scss */
 .entire-width {
   width: 100%;
 }
@@ -1100,203 +1137,62 @@ section .section-title {
   background-image: url("https://againtest.azurewebsites.net/public/images/people.jpg");
 }
 
-/* line 208, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .solution-banner {
-  position: relative;
-  margin-bottom: 20px;
+/* line 207, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks {
+  display: flex;
+  flex-wrap: wrap;
 }
-/* line 211, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .solution-banner .solution-title {
-  position: absolute;
-  right: 20px;
-  top: -20px;
+/* line 210, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block {
+  width: 49%;
+  margin-left: 1%;
   color: white;
+  background: linear-gradient(rgba(113, 81, 157, 0.4), rgba(113, 81, 157, 0.4)), url("http://localhost:3000/public/images/building-block.jpg") no-repeat center;
+  background-size: cover;
+  margin-bottom: 15px;
 }
-@media (max-width: 768px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    font-size: 2rem;
-  }
+/* line 224, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block:nth-child(odd) {
+  margin-left: 0;
+  margin-right: 1%;
 }
-@media (max-width: 668px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    top: -15px;
-  }
+/* line 228, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block .sol-title {
+  border-bottom: 3px solid white;
+  text-align: center;
+  margin: 0;
+  padding: 14px 0;
 }
-@media (max-width: 580px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    font-size: 1.6rem;
-    top: -10px;
-  }
-}
-@media (max-width: 475px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    right: 10px;
-    font-size: 1.4rem;
-  }
-}
-@media (max-width: 415px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    left: 10px;
-    width: 60%;
-  }
-}
-@media (max-width: 375px) {
-  /* line 211, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-title {
-    position: relative;
-    margin: 5px 0 15px 0;
-    left: 0;
-    width: 65%;
-    float: left;
-    color: #2b2b2b;
-    font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
-    font-size: 1.2rem;
-    margin: 0;
-    padding-top: 5px;
-  }
-}
-/* line 247, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .solution-banner button {
-  position: absolute;
-  right: 20px;
-  width: 120px;
-}
-@media (max-width: 668px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    top: 55px;
-  }
-}
-@media (max-width: 580px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    font-size: 0.9rem;
-    width: 100px;
-    top: 45px;
-  }
-}
-@media (max-width: 475px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    right: 10px;
-    padding: 4px 8px;
-    width: 100px;
-    top: 35px;
-  }
-}
-@media (max-width: 415px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    width: 35%;
-    top: 23px;
-  }
-}
-@media (max-width: 375px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    position: relative;
-    top: 0;
-    right: 0;
-  }
-}
-@media (max-width: 310px) {
-  /* line 247, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner button {
-    font-size: 0.7rem;
-  }
-}
-/* line 278, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .solution-banner .solution-text {
-  background-color: #ececec;
-  padding: 20px;
-  display: block;
-  width: 60%;
-  margin: -5px 0 20px auto;
-}
-/* line 284, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .solution-banner .solution-text a {
-  margin-top: 20px;
-}
-@media (max-width: 668px) {
-  /* line 278, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-text {
-    width: 80%;
-  }
-}
-@media (max-width: 415px) {
-  /* line 278, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-text {
-    width: 100%;
-  }
-}
-@media (max-width: 375px) {
-  /* line 278, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .solution-banner .solution-text {
-    margin-top: 0;
-  }
-}
-/* line 298, ../sass/_partials/_sections.scss */
-#solutions .solution-banners .flexforcemonkey .solution-title {
-  color: #2b2b2b;
-}
-@media (max-width: 415px) {
-  /* line 298, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .flexforcemonkey .solution-title {
-    top: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-    height: 30px;
-  }
-}
-@media (max-width: 375px) {
-  /* line 298, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .flexforcemonkey .solution-title {
-    top: -1px;
-    background-color: transparent;
-  }
-}
-@media (max-width: 375px) {
-  /* line 310, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .deployments .solution-title {
-    top: -1px;
-  }
-}
-@media (max-width: 318px) {
-  /* line 310, ../sass/_partials/_sections.scss */
-  #solutions .solution-banners .deployments .solution-title {
-    top: -10px;
-  }
+/* line 234, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block .sol-text {
+  padding: 15px;
 }
 
 @media (max-width: 580px) {
-  /* line 322, ../sass/_partials/_sections.scss */
+  /* line 242, ../sass/_partials/_sections.scss */
   #three-colums .row {
     flex-direction: column;
   }
 }
-/* line 326, ../sass/_partials/_sections.scss */
+/* line 246, ../sass/_partials/_sections.scss */
 #three-colums .row .column {
   background-color: #ececec;
   margin-right: 15px;
   padding: 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-/* line 331, ../sass/_partials/_sections.scss */
+/* line 251, ../sass/_partials/_sections.scss */
 #three-colums .row .column:last-child {
   margin-right: 0;
 }
 @media (max-width: 580px) {
-  /* line 326, ../sass/_partials/_sections.scss */
+  /* line 246, ../sass/_partials/_sections.scss */
   #three-colums .row .column {
     margin-bottom: 20px;
     margin-right: 0;
   }
 }
-/* line 338, ../sass/_partials/_sections.scss */
+/* line 258, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-title {
   margin: 0;
   padding: 10px;
@@ -1305,22 +1201,22 @@ section .section-title {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
 }
 @media (max-width: 678px) {
-  /* line 338, ../sass/_partials/_sections.scss */
+  /* line 258, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-title {
     font-size: 1.6rem;
   }
 }
-/* line 348, ../sass/_partials/_sections.scss */
+/* line 268, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text {
   padding: 0 15px 15px 15px;
 }
 @media (max-width: 678px) {
-  /* line 348, ../sass/_partials/_sections.scss */
+  /* line 268, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-text {
     padding: 0 10px 10px 10px;
   }
 }
-/* line 353, ../sass/_partials/_sections.scss */
+/* line 273, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text .indicates-required {
   font-size: 0.8rem;
   margin-bottom: 10px;
@@ -1337,25 +1233,31 @@ section .section-title {
 
 /* line 9, ../sass/_partials/_banner.scss */
 .banner-1 {
-  background-image: url("https://againtest.azurewebsites.net/public/images/connect.jpg");
+  background-image: url("http://localhost:3000/public/images/banner1.jpg");
+  background-attachment: fixed;
 }
 
-/* line 13, ../sass/_partials/_banner.scss */
+/* line 14, ../sass/_partials/_banner.scss */
 .banner-2 {
   height: auto;
-  margin: -100px 0;
+  margin: 0 0 40px 0;
+  padding-left: 20%;
 }
 @media (max-width: 580px) {
-  /* line 13, ../sass/_partials/_banner.scss */
+  /* line 14, ../sass/_partials/_banner.scss */
   .banner-2 {
     margin: -100px 0;
   }
 }
 @media (max-width: 415px) {
-  /* line 13, ../sass/_partials/_banner.scss */
+  /* line 14, ../sass/_partials/_banner.scss */
   .banner-2 {
     margin: -50px 0;
   }
+}
+/* line 24, ../sass/_partials/_banner.scss */
+.banner-2 img {
+  max-width: 100%;
 }
 
 /* line 1, ../sass/_partials/_footer.scss */
