--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -7,16 +7,21 @@
 }
 
 .banner-1 {
-    background-image: url('https://againtest.azurewebsites.net/public/images/connect.jpg');
+    background-image: url('http://localhost:3000/public/images/banner1.jpg');
+    background-attachment: fixed;
 }
 
 .banner-2 {
     height: auto;
-    margin: -100px 0;
+    margin: 0 0 40px 0;
+    padding-left: 20%;
     @media (max-width: 580px) {
         margin: -100px 0;
     }
     @media (max-width: 415px) {
         margin: -50px 0;
+    }
+    img {
+        max-width: 100%;
     }
 }
