Translated to Dutch

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <section id="reasons">
     <div class="container">
-        <h2 class="section-title">Our reasons</h2>
+        <h2 class="section-title">Onze redenen</h2>
         <div class="row all-reasons">
             <div class="column profit" onclick="selectReason('profit')">
                 <div class="circle">
@@ -68,7 +68,7 @@
 
 <section id="solutions">
     <div class="container">
-        <h2 class="section-title">Our solutions</h2>
+        <h2 class="section-title">Onze oplossingen</h2>
         <div class="solution-blocks">
             <div class="solution-block strategy">
                 <h4 class="sol-title"><span class="fa fa-comments"></span> Strategy as a Service</h4>
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="row">
             <div id="technology" class="column column-1">
-                <h4 class="column-title">Technology</h4>
+                <h4 class="column-title">Technologie</h4>
                 <div class="column-text">
                     <p>
                         <a href="https://azure.microsoft.com/nl-nl/" target="_blank">Azure</a><br />
@@ -116,31 +116,31 @@
                 </div>
             </div>
             <div id="careers" class="column column-1">
-                <h4 class="column-title">Careers</h4>
+                <h4 class="column-title">Vacatures</h4>
                 <div class="column-text">
-                    <p>Check tech and get in touch</p>
-                    <a href="http://lakran.com/vacatures/" target="_blank" class="btn-primary entire-width">Vacancies (Dutch) <span class="fa fa-external-link-alt"></span></a>
+                    <p>Bekijk al onze vacatures:</p>
+                    <a href="http://lakran.com/vacatures/" target="_blank" class="btn-primary entire-width">Vacatures <span class="fa fa-external-link-alt"></span></a>
                 </div>
             </div>
             <div id="mailing" class="column column-1">
                 <h4 class="column-title">Mailing list</h4>
                 <div class="column-text">
-                    <p>Subscribe to our newsletter!</p>
+                    <p>Schrijf je in voor onze nieuwsbrief!</p>
                     <!-- Begin MailChimp Signup Form -->
                     <div id="mc_embed_signup">
                         <form action="https://again.us8.list-manage.com/subscribe/post?u=53785b16e31b45f83200436f2&amp;id=81a374215f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
-                                <div class="indicates-required">Fields with <span class="asterisk">*</span> are required</div>
+                                <div class="indicates-required">Velden met een <span class="asterisk">*</span> zijn vereist</div>
                                 <div class="mc-field-group">
-                                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>
+                                    <label for="mce-EMAIL">Email  <span class="asterisk">*</span></label>
                                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                                 </div>
                                 <div class="mc-field-group">
-                                    <label for="mce-FNAME">First Name </label>
+                                    <label for="mce-FNAME">Voornaam</label>
                                     <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
                                 </div>
                                 <div class="mc-field-group">
-                                    <label for="mce-LNAME">Last Name </label>
+                                    <label for="mce-LNAME">Achternaam</label>
                                     <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
                                 </div>
                                 <div id="mce-responses" class="clear">
