--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,24 +53,24 @@
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for creating economic value</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('profit')" class="btn-white-transparent-xl">Our reasons</a><br />
-                    <a onclick="scrollToSolution('profit')" href="#solutions" class="btn-white-transparent-xl">Our solutions</a>
+                    <a onclick="scrollToReason('profit')" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('profit')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
             <li class="myslides slide-2">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for saving natural resources</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('planet')" href="#reasons" class="btn-white-transparent-xl">Our reasons</a><br />
-                    <a onclick="scrollToSolution('planet')" href="#solutions" class="btn-white-transparent-xl">Our solutions</a>
+                    <a onclick="scrollToReason('planet')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('planet')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
             <li class="myslides slide-3">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
                 <div class="text">Software to connect companies for enabling communities</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('people')" href="#reasons" class="btn-white-transparent-xl">Our reasons</a><br />
-                    <a onclick="scrollToSolution('people')" href="#solutions" class="btn-white-transparent-xl">Our solutions</a>
+                    <a onclick="scrollToReason('people')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('people')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
         </ul>
@@ -91,16 +91,16 @@
         </div>
         <ul class="menu-items">
             <li class="menu-item menu-item-1">
-                <a onclick="menuClick('#reasons')">Our reasons</a>
+                <a onclick="menuClick('#reasons')">Onze redenen</a>
             </li>
             <li class="menu-item menu-item-2">
-                <a onclick="menuClick('#solutions')">Our solutions</a>
+                <a onclick="menuClick('#solutions')">Onze oplossingen</a>
             </li>
             <li class="menu-item menu-item-3">
-                <a onclick="menuClick('#technology')">Technology</a>
+                <a onclick="menuClick('#technology')">Technologie</a>
             </li>
             <li class="menu-item menu-item-4">
-                <a onclick="menuClick('#careers')">Careers</a>
+                <a onclick="menuClick('#careers')">Vacatures</a>
             </li>
             <li class="menu-item menu-item-5">
                 <a onclick="menuClick('#mailing')">Mailing list</a>
@@ -114,13 +114,13 @@
 <div id="contact-modal" class="modal">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title">Get in contact</h3>
+            <h3 class="modal-title">Neem contact op</h3>
             <button class="close" onclick="closeModal('contact')">&times;</button>
         </div>
         <form id="contact-form" method="POST" action="send">
             <div class="modal-body">
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name">Naam</label>
                     <input type="text" id="name" name="name">
                 </div>
                 <div class="form-group">
@@ -128,18 +128,18 @@
                     <input type="email" id="email" name="email">
                 </div>
                 <div class="form-group">
-                    <label for="subject">Subject</label>
+                    <label for="subject">Onderwerp</label>
                     <input type="text" id="subject" name="subject">
                 </div>
                 <div class="form-group">
-                    <label for="msg">Message</label>
+                    <label for="msg">Bericht</label>
                     <textarea name="msg" id="msg"></textarea>
                 </div>
                 {{!-- <div class="g-recaptcha" data-sitekey="6LfIOEkUAAAAANvbdpYps7L8LslfjMZr1SD4LJz3" data-callback="recaptchaCallback"></div> --}}
             </div>
             <div class="modal-footer">
-                <button class="btn-dark-grey" onclick="closeModal('contact')">Cancel <span class="fa fa-times"></span></button>
-                <button id="contact-submit" type="submit" disabled="disabled" class="btn-primary">Send <span class="fa fa-paper-plane"></span></button>
+                <button class="btn-dark-grey" onclick="closeModal('contact')">Annuleren <span class="fa fa-times"></span></button>
+                <button id="contact-submit" type="submit" disabled="disabled" class="btn-primary">Verstuur <span class="fa fa-paper-plane"></span></button>
             </div>
         </form>
     </div>
@@ -148,12 +148,12 @@
 <div id="success-modal" class="modal">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title">Success!</h3>
+            <h3 class="modal-title">Succes!</h3>
             <button class="close" onclick="closeSuccessModal()">&times;</button>
         </div>
         <div class="modal-body">
             <span class="fa fa-check-circle"></span>
-            <p>Your form has been sent successfully. We will contact you as soon as possible!</p>
+            <p>Je formulier is succesvol verzonden. We zullen zo spoedig mogelijk contact met je opnemen!</p>
         </div>
         <div class="modal-footer">
             <button class="btn-dark-grey" onclick="closeSuccessModal()">Close <span class="fa fa-times"></span></button>
@@ -176,18 +176,21 @@
                 <span class="fa fa-envelope"></span> <a class="link-light" href="mailto:curious@again.nl"><span itemprop="email">curious@again.nl</span></a>
             </p>
             <p>
-                Or fill in our contact form:<br />
-                <a class="btn-primary" onclick="showModal('contact')">Contact form</a>
+                Of vul ons contactformulier in:<br />
+                <a class="btn-primary" onclick="showModal('contact')">Contact formulier</a>
             </p>
         </div>
         <div id="map" class="footer-maps"></div>
     </div>
     <div class="other-brands">
-        <h6>AGAIN by LAKRAN is part of <a class="link-light" href="http://lakran.com" target="_blank">LAKRAN Commerce Group</a></h6>
-        <p>Other companies are:</p>
+        <h6>LAKRAN VMS Services is onderdeel van <a class="link-light" href="http://lakran.com" target="_blank">LAKRAN Commerce Group</a></h6>
+        <p>Andere bedrijven zijn:</p>
         <div class="companies">
             <a href="http://simplifyingpurchasing.com" target="_blank" title="LAKRAN Procurement Professionals">
                 <img src="./public/images/lakran-applogo.jpg" alt="LAKRAN Procurement Professionals Logo">
+            </a>
+            <a href="http://again.nl" target="_blank" title="AGAIN by LAKRAN">
+                <img src="./public/images/again-applogo.png" alt="AGAIN by LAKRAN">
             </a>
             <a href="http://lakran.com/again-stichting" target="_blank" title="AGAIN stichting">
                 <img src="./public/images/against-applogo.png" alt="AGAIN stichting Logo">
